--- a/analyze_mode.ipynb
+++ b/analyze_mode.ipynb
@@ -13,12 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/ephraim/CDiffuSE/.venv/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/data/ephraim/CDiffuSE/.venv/lib/python3.8/site-packages/torchaudio/backend/utils.py:53: UserWarning: \"sox\" backend is being deprecated. The default backend will be changed to \"sox_io\" backend in 0.8.0 and \"sox\" backend will be removed in 0.9.0. Please migrate to \"sox_io\" backend. Please refer to https://github.com/pytorch/audio/issues/903 for the detail.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "# from torchaudio.utils import download_asset\n",
-    "# import torchaudio.functional as F\n",
+    "\n",
     "from IPython.display import Audio\n",
     "import torch\n",
     "import torchaudio\n",
@@ -27,126 +37,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pkl_results_file = \"SE_measures_pretrained_generic_obj_all.pickle\"\n",
+    "pkl_results_file = \"SE_measures_mode2.pickle\"\n",
     "with open(pkl_results_file, \"rb\") as handle:\n",
     "    results = pickle.load(handle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       pesq_noisy  stoi_noisy  stoi_est_noisy    pesq_est  sisdr_est_noisy  \\\n",
-      "count  824.000000  824.000000      824.000000  824.000000       824.000000   \n",
-      "mean     1.970894    0.921046        0.959468    2.312226         8.567488   \n",
-      "std      0.752793    0.070918        0.052560    0.776100         5.629465   \n",
-      "min      1.031246    0.560032        0.642317    1.100813        -3.134989   \n",
-      "25%      1.290388    0.887391        0.946647    1.650657         2.725704   \n",
-      "50%      1.797897    0.940031        0.978557    2.240017         8.109539   \n",
-      "75%      2.552865    0.975415        0.994699    2.880762        12.656152   \n",
-      "max      4.300500    0.999815        0.999868    4.227460        23.890188   \n",
-      "\n",
-      "       pesq_enhanced  stoi_enhanced  stoi_est_enhanced  pesq_est_enhanced  \\\n",
-      "count     824.000000     824.000000         824.000000         824.000000   \n",
-      "mean        2.485738       0.911887           0.989347           3.125433   \n",
-      "std         0.546866       0.053772           0.021323           0.641832   \n",
-      "min         1.056885       0.548409           0.732782           1.311159   \n",
-      "25%         2.140851       0.886999           0.990164           2.680485   \n",
-      "50%         2.574089       0.926333           0.996242           3.219096   \n",
-      "75%         2.886577       0.952019           0.998225           3.631561   \n",
-      "max         3.642150       0.980220           0.999882           4.365867   \n",
-      "\n",
-      "       sisdr_est_enhanced  mos_est_noise  mos_est_enhanced   pesq_diff  \\\n",
-      "count          824.000000     824.000000        824.000000  824.000000   \n",
-      "mean            20.233893       2.657914          2.994785    0.514845   \n",
-      "std              4.487247       0.622766          0.521250    0.422548   \n",
-      "min              8.274318       2.002665          2.002660   -1.262692   \n",
-      "25%             16.137329       2.079155          2.584637    0.257724   \n",
-      "50%             20.840709       2.485631          3.079947    0.539401   \n",
-      "75%             24.099137       3.132526          3.423149    0.771252   \n",
-      "max             28.136868       4.994561          4.171928    1.647539   \n",
-      "\n",
-      "        stoi_diff  stoi_est_diff  pesq_est_diff  sisdr_est_est_diff  \\\n",
-      "count  824.000000     824.000000     824.000000          824.000000   \n",
-      "mean    -0.009159       0.029879       0.813207           11.666404   \n",
-      "std      0.024376       0.038482       0.380698            2.105273   \n",
-      "min     -0.062583      -0.109934      -0.836443            1.192838   \n",
-      "25%     -0.025193       0.002869       0.588929           10.161902   \n",
-      "50%     -0.016180       0.016646       0.871743           12.183467   \n",
-      "75%     -0.000415       0.043874       1.079712           13.206152   \n",
-      "max      0.100356       0.208271       1.772502           16.679481   \n",
-      "\n",
-      "       mos_est_diff  \n",
-      "count    824.000000  \n",
-      "mean       0.336871  \n",
-      "std        0.458075  \n",
-      "min       -1.052831  \n",
-      "25%        0.019947  \n",
-      "50%        0.314140  \n",
-      "75%        0.625664  \n",
-      "max        2.020365  \n"
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'descrice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/data/ephraim/CDiffuSE/analyze_mode.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bcoding.eng.tau.ac.il/data/ephraim/CDiffuSE/analyze_mode.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m results\u001b[39m.\u001b[39;49mdescrice()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'descrice'"
      ]
     }
    ],
-   "source": [
-    "df = pd.DataFrame.from_dict(results)\n",
-    "df[\"pesq_diff\"] = df[\"pesq_enhanced\"].sub(df[\"pesq_noisy\"])\n",
-    "df[\"stoi_diff\"] = df[\"stoi_enhanced\"].sub(df[\"stoi_noisy\"])\n",
-    "df[\"stoi_est_diff\"] = df[\"stoi_est_enhanced\"].sub(df[\"stoi_est_noisy\"])\n",
-    "df[\"pesq_est_diff\"] = df[\"pesq_est_enhanced\"].sub(df[\"pesq_est\"])\n",
-    "df[\"sisdr_est_est_diff\"] = df[\"sisdr_est_enhanced\"].sub(df[\"sisdr_est_noisy\"])\n",
-    "df[\"mos_est_diff\"] = df[\"mos_est_enhanced\"].sub(df[\"mos_est_noise\"])\n",
-    "\n",
-    "print(df.describe())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       sisdr_est_noisy  sisdr_est_enhanced  mos_est_noise  mos_est_enhanced\n",
-      "count       824.000000          824.000000     824.000000        824.000000\n",
-      "mean          8.567488           20.233893       2.657914          2.994785\n",
-      "std           5.629465            4.487247       0.622766          0.521250\n",
-      "min          -3.134989            8.274318       2.002665          2.002660\n",
-      "25%           2.725704           16.137329       2.079155          2.584637\n",
-      "50%           8.109539           20.840709       2.485631          3.079947\n",
-      "75%          12.656152           24.099137       3.132526          3.423149\n",
-      "max          23.890188           28.136868       4.994561          4.171928\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\n",
-    "    df[\n",
-    "        [\n",
-    "            \"sisdr_est_noisy\",\n",
-    "            \"sisdr_est_enhanced\",\n",
-    "            \"mos_est_noise\",\n",
-    "            \"mos_est_enhanced\"\n",
-    "\n",
-    "        ]\n",
-    "    ].describe()\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_dict(results)\n",
+    "df[\"pesq_diff\"] = df[\"pesq_enhanced\"].sub(df[\"pesq_noisy\"])\n",
+    "df[\"stoi_diff\"] = df[\"stoi_enhanced\"].sub(df[\"stoi_noisy\"])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -181,75 +115,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>824.000000</td>\n",
-       "      <td>824.000000</td>\n",
-       "      <td>824.000000</td>\n",
-       "      <td>824.000000</td>\n",
-       "      <td>824.000000</td>\n",
-       "      <td>824.000000</td>\n",
+       "      <td>823.000000</td>\n",
+       "      <td>823.000000</td>\n",
+       "      <td>823.000000</td>\n",
+       "      <td>823.000000</td>\n",
+       "      <td>823.000000</td>\n",
+       "      <td>823.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>1.970894</td>\n",
-       "      <td>0.921046</td>\n",
-       "      <td>2.485738</td>\n",
-       "      <td>0.911887</td>\n",
-       "      <td>0.514845</td>\n",
-       "      <td>-0.009159</td>\n",
+       "      <td>1.970835</td>\n",
+       "      <td>0.921086</td>\n",
+       "      <td>2.645921</td>\n",
+       "      <td>0.925985</td>\n",
+       "      <td>0.675087</td>\n",
+       "      <td>0.004899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.752793</td>\n",
-       "      <td>0.070918</td>\n",
-       "      <td>0.546866</td>\n",
-       "      <td>0.053772</td>\n",
-       "      <td>0.422548</td>\n",
-       "      <td>0.024376</td>\n",
+       "      <td>0.753248</td>\n",
+       "      <td>0.070952</td>\n",
+       "      <td>0.645769</td>\n",
+       "      <td>0.062959</td>\n",
+       "      <td>0.404727</td>\n",
+       "      <td>0.016466</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>1.031246</td>\n",
        "      <td>0.560032</td>\n",
-       "      <td>1.056885</td>\n",
-       "      <td>0.548409</td>\n",
-       "      <td>-1.262692</td>\n",
-       "      <td>-0.062583</td>\n",
+       "      <td>1.229977</td>\n",
+       "      <td>0.591346</td>\n",
+       "      <td>-0.579006</td>\n",
+       "      <td>-0.070348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>1.290388</td>\n",
-       "      <td>0.887391</td>\n",
-       "      <td>2.140851</td>\n",
-       "      <td>0.886999</td>\n",
-       "      <td>0.257724</td>\n",
-       "      <td>-0.025193</td>\n",
+       "      <td>1.290071</td>\n",
+       "      <td>0.887223</td>\n",
+       "      <td>2.193447</td>\n",
+       "      <td>0.893281</td>\n",
+       "      <td>0.383648</td>\n",
+       "      <td>-0.003455</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>1.797897</td>\n",
-       "      <td>0.940031</td>\n",
-       "      <td>2.574089</td>\n",
-       "      <td>0.926333</td>\n",
-       "      <td>0.539401</td>\n",
-       "      <td>-0.016180</td>\n",
+       "      <td>1.796571</td>\n",
+       "      <td>0.940099</td>\n",
+       "      <td>2.666502</td>\n",
+       "      <td>0.943750</td>\n",
+       "      <td>0.604530</td>\n",
+       "      <td>0.002390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>2.552865</td>\n",
-       "      <td>0.975415</td>\n",
-       "      <td>2.886577</td>\n",
-       "      <td>0.952019</td>\n",
-       "      <td>0.771252</td>\n",
-       "      <td>-0.000415</td>\n",
+       "      <td>2.552874</td>\n",
+       "      <td>0.975418</td>\n",
+       "      <td>3.091064</td>\n",
+       "      <td>0.974250</td>\n",
+       "      <td>0.927740</td>\n",
+       "      <td>0.012899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>4.300500</td>\n",
        "      <td>0.999815</td>\n",
-       "      <td>3.642150</td>\n",
-       "      <td>0.980220</td>\n",
-       "      <td>1.647539</td>\n",
-       "      <td>0.100356</td>\n",
+       "      <td>4.243578</td>\n",
+       "      <td>0.998613</td>\n",
+       "      <td>2.058601</td>\n",
+       "      <td>0.080587</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -257,41 +191,74 @@
       ],
       "text/plain": [
        "       pesq_noisy  stoi_noisy  pesq_enhanced  stoi_enhanced   pesq_diff  \\\n",
-       "count  824.000000  824.000000     824.000000     824.000000  824.000000   \n",
-       "mean     1.970894    0.921046       2.485738       0.911887    0.514845   \n",
-       "std      0.752793    0.070918       0.546866       0.053772    0.422548   \n",
-       "min      1.031246    0.560032       1.056885       0.548409   -1.262692   \n",
-       "25%      1.290388    0.887391       2.140851       0.886999    0.257724   \n",
-       "50%      1.797897    0.940031       2.574089       0.926333    0.539401   \n",
-       "75%      2.552865    0.975415       2.886577       0.952019    0.771252   \n",
-       "max      4.300500    0.999815       3.642150       0.980220    1.647539   \n",
+       "count  823.000000  823.000000     823.000000     823.000000  823.000000   \n",
+       "mean     1.970835    0.921086       2.645921       0.925985    0.675087   \n",
+       "std      0.753248    0.070952       0.645769       0.062959    0.404727   \n",
+       "min      1.031246    0.560032       1.229977       0.591346   -0.579006   \n",
+       "25%      1.290071    0.887223       2.193447       0.893281    0.383648   \n",
+       "50%      1.796571    0.940099       2.666502       0.943750    0.604530   \n",
+       "75%      2.552874    0.975418       3.091064       0.974250    0.927740   \n",
+       "max      4.300500    0.999815       4.243578       0.998613    2.058601   \n",
        "\n",
        "        stoi_diff  \n",
-       "count  824.000000  \n",
-       "mean    -0.009159  \n",
-       "std      0.024376  \n",
-       "min     -0.062583  \n",
-       "25%     -0.025193  \n",
-       "50%     -0.016180  \n",
-       "75%     -0.000415  \n",
-       "max      0.100356  "
+       "count  823.000000  \n",
+       "mean     0.004899  \n",
+       "std      0.016466  \n",
+       "min     -0.070348  \n",
+       "25%     -0.003455  \n",
+       "50%      0.002390  \n",
+       "75%      0.012899  \n",
+       "max      0.080587  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(\n",
+    "    df[[\n",
+    "        \"pesq_noisy\",\n",
+    "        \"stoi_noisy\",\n",
+    "        \"pesq_enhanced\",\n",
+    "        \"stoi_enhanced\",\n",
+    "        \"pesq_diff\",\n",
+    "        \"stoi_diff\",\n",
+    "    ]].describe()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       sisdr_est_noisy  sisdr_est_enhanced  mos_est_noise  mos_est_enhanced\n",
+      "count       824.000000          824.000000     824.000000        824.000000\n",
+      "mean          8.567488           20.233893       2.657914          2.994785\n",
+      "std           5.629465            4.487247       0.622766          0.521250\n",
+      "min          -3.134989            8.274318       2.002665          2.002660\n",
+      "25%           2.725704           16.137329       2.079155          2.584637\n",
+      "50%           8.109539           20.840709       2.485631          3.079947\n",
+      "75%          12.656152           24.099137       3.132526          3.423149\n",
+      "max          23.890188           28.136868       4.994561          4.171928\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
     "    df[\n",
     "        [\n",
-    "            \"pesq_noisy\",\n",
-    "            \"stoi_noisy\",\n",
-    "            \"pesq_enhanced\",\n",
-    "            \"stoi_enhanced\",\n",
-    "            \"pesq_diff\",\n",
-    "            \"stoi_diff\",\n",
+    "            \"sisdr_est_noisy\",\n",
+    "            \"sisdr_est_enhanced\",\n",
+    "            \"mos_est_noise\",\n",
+    "            \"mos_est_enhanced\"\n",
+    "\n",
     "        ]\n",
     "    ].describe()\n",
     ")"
